tests/neg/main-annotation-generic.scala
object myProgram:

  @main def nop[T](t: T): T = // error
    t

end myProgram
